--- a/RBCNumberSpeakerDemo/RBCNumberSpeakerDemo/en.lproj/MainStoryboard.storyboard
+++ b/RBCNumberSpeakerDemo/RBCNumberSpeakerDemo/en.lproj/MainStoryboard.storyboard
@@ -32,15 +32,22 @@
                                     <action selector="speakButtonPressed:" destination="2" eventType="touchUpInside" id="Uy0-Ig-yJT"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Number to speak:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mD8-Eo-tdI">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="An0-5g-6ye" firstAttribute="top" secondItem="mD8-Eo-tdI" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="3a2-8A-peq"/>
                             <constraint firstAttribute="trailing" secondItem="BeC-ox-qCz" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="CX8-HD-HWj"/>
                             <constraint firstItem="BeC-ox-qCz" firstAttribute="top" secondItem="3" secondAttribute="top" constant="128" id="Mrx-oB-a9X"/>
+                            <constraint firstItem="mD8-Eo-tdI" firstAttribute="top" secondItem="3" secondAttribute="top" constant="49" id="PLA-Uq-tZx"/>
                             <constraint firstAttribute="trailing" secondItem="An0-5g-6ye" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="VbS-Ww-dnr"/>
-                            <constraint firstItem="An0-5g-6ye" firstAttribute="top" secondItem="3" secondAttribute="top" constant="78" id="WWl-sG-1Hm"/>
                             <constraint firstItem="BeC-ox-qCz" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="fZb-Fv-ip6"/>
                             <constraint firstItem="An0-5g-6ye" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="nDr-cG-c1l"/>
+                            <constraint firstItem="mD8-Eo-tdI" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="trh-z7-7fs"/>
                         </constraints>
                     </view>
                     <connections>
@@ -58,6 +65,7 @@
         <class className="RBCViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RBCViewController.h"/>
             <relationships>
+                <relationship kind="action" name="speakButtonPressed:" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="textField" candidateClass="UITextField"/>
             </relationships>
         </class>
